; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_dispex.c_ensure_prop_name.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_dispex.c_ensure_prop_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, %struct.TYPE_6__, i32 }
%struct.TYPE_6__ = type { i8* }

@PROP_DELETED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c"creating prop %s flags %x\0A\00", align 1
@PROP_JSVAL = common dso_local global i64 0, align 8
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, %struct.TYPE_7__**)* @ensure_prop_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ensure_prop_name(i32* %0, i32* %1, i32 %2, %struct.TYPE_7__** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_7__**, align 8
  %10 = alloca %struct.TYPE_7__*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_7__** %3, %struct.TYPE_7__*** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @string_hash(i32* %13)
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @find_prop_name_prot(i32* %12, i32 %14, i32* %15, %struct.TYPE_7__** %10)
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %11, align 4
  %18 = call i64 @SUCCEEDED(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %63

20:                                               ; preds = %4
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %22 = icmp ne %struct.TYPE_7__* %21, null
  br i1 %22, label %23, label %29

23:                                               ; preds = %20
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @PROP_DELETED, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %63

29:                                               ; preds = %23, %20
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @debugstr_w(i32* %30)
  %32 = load i32, i32* %8, align 4
  %33 = call i32 @TRACE(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %31, i32 %32)
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %35 = icmp ne %struct.TYPE_7__* %34, null
  br i1 %35, label %36, label %47

36:                                               ; preds = %29
  %37 = load i64, i64* @PROP_JSVAL, align 8
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %38, i32 0, i32 0
  store i64 %37, i64* %39, align 8
  %40 = load i32, i32* %8, align 4
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 2
  store i32 %40, i32* %42, align 8
  %43 = call i8* (...) @jsval_undefined()
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %44, i32 0, i32 1
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 0
  store i8* %43, i8** %46, align 8
  br label %58

47:                                               ; preds = %29
  %48 = load i32*, i32** %6, align 8
  %49 = load i32*, i32** %7, align 8
  %50 = load i64, i64* @PROP_JSVAL, align 8
  %51 = load i32, i32* %8, align 4
  %52 = call %struct.TYPE_7__* @alloc_prop(i32* %48, i32* %49, i64 %50, i32 %51)
  store %struct.TYPE_7__* %52, %struct.TYPE_7__** %10, align 8
  %53 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %54 = icmp ne %struct.TYPE_7__* %53, null
  br i1 %54, label %57, label %55

55:                                               ; preds = %47
  %56 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %56, i32* %5, align 4
  br label %67

57:                                               ; preds = %47
  br label %58

58:                                               ; preds = %57, %36
  %59 = call i8* (...) @jsval_undefined()
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 1
  %62 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %61, i32 0, i32 0
  store i8* %59, i8** %62, align 8
  br label %63

63:                                               ; preds = %58, %23, %4
  %64 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %65 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %9, align 8
  store %struct.TYPE_7__* %64, %struct.TYPE_7__** %65, align 8
  %66 = load i32, i32* %11, align 4
  store i32 %66, i32* %5, align 4
  br label %67

67:                                               ; preds = %63, %55
  %68 = load i32, i32* %5, align 4
  ret i32 %68
}

declare dso_local i32 @find_prop_name_prot(i32*, i32, i32*, %struct.TYPE_7__**) #1

declare dso_local i32 @string_hash(i32*) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @TRACE(i8*, i32, i32) #1

declare dso_local i32 @debugstr_w(i32*) #1

declare dso_local i8* @jsval_undefined(...) #1

declare dso_local %struct.TYPE_7__* @alloc_prop(i32*, i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
